--- a/Dasmotos/index.html
+++ b/Dasmotos/index.html
@@ -33,7 +33,7 @@
       <h2>Paint</h2>
       <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/finnish.jpeg" alt="tubes of paints and brushes on a wooden table" />
       <h3>Clean Finnish Paint</h3>
-      <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork. <a id="price">Starting at $5.00 / tube.</a></p>
+      <p> <a id="price">Starting at $5.00 / tube.</a></p>
     </div>
   </body>
 </html>
